# ceinmsrt-plugin-emgudp-cpp

./: CMakeLists.txt  README.md  executionEMG_ankle_knee.xml  executionRT.xml  subjectMTUCalibrated.xml
include/: EMG_UDP_Simulink.h
src/: CMakeLists.txt  EMG_UDP_Simulink.cpp  UDPClient.cpp  UDPServer.cpp  test.cpp  testServerEMG.cpp
src/TestScripts/: UDPPythonExampleEMG.py  exampleRT_UDP.slx  udp.py  udp_code.m
